# stg-nf-rt

./: README.md  buffer.py  export_trt_vitpose.py  export_trt_yolo.py  generate_data.py  inferense_stg.py  pipeline_async.py  pipeline_sync.py  pyproject.toml  visualization.py
STG-NF/: args.py  custom_deque.py  dataset.py  gen_data.py  stg_inference.py  stg_inference_reid.py  train_eval.py  vit_stg_inference.py
STG-NF/models/: training.py
STG-NF/models/STG_NF/: graph.py  model_pose.py  modules_pose.py  stgcn.py  tgcn.py  utils.py
STG-NF/utils/: data_utils.py  optim_init.py  pose_utils.py  scoring_utils.py  train_utils.py
STG_NF/: README.md  args.py  dataset.py  environment.yml  gen_data.py  train_eval.py
STG_NF/checkpoints/: Mar15_2259__checkpoint.pth.tar
STG_NF/models/: training.py
STG_NF/models/STG_NF/: graph.py  model_pose.py  modules_pose.py  stgcn.py  tgcn.py  utils.py
STG_NF/utils/: data_utils.py  optim_init.py  pose_utils.py  scoring_utils.py  train_utils.py
_old/: generate_data.py  train_eval.py  visualization.py
tracking/: track.py
