[project]
name = "stg-nf-rt"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "lap>=0.5.12",
    "onnx>=1.12.0",
    "onnxruntime-gpu",
    "onnxslim",
    "opencv-python",
    "supervision",
    "tensorrt",
    "transformers",
    "ultralytics",
    "torch",
    "torchvision",
    "torch-tensorrt>=2.6.0",
    "tensorrt"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
tensorrt = [
    { index = "tensorrt-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torch-tensorrt = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "tensorrt-cu126"
url = "https://pypi.nvidia.com"
explicit = true
# uv pip install torch torchvision torch-tensorrt tensorrt opencv-python ultralytics supervision transformers lap onnx>=1.12.0 onnxslim onnxruntime-gpu --extra-index-url https://pypi.nvidia.com --upgrade